--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .header{
     background-color: #1F2937;
     padding: 0 15%;
-    height: 70vh;
+    min-height: 70vh;
     display: flex;
     flex-direction: column;
 }
@@ -87,4 +87,54 @@ button{
     flex-direction: column;
     gap: 15px;
     align-items: flex-start;
+}
+
+/* information section */
+.info-container{
+    /* border: 2px solid gray; */
+    min-height: 60vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.info{
+    /* border: 1px solid gray; */
+    width: 60%;
+}
+
+.info-header{
+    color: #1F2937;
+    font-size: 36px;
+    font-weight: 900;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.card-container{
+    /* border: 1px solid gray; */
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.card{
+    /* border: 1px solid gray; */
+    max-width: 165px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.card-img{
+    border: 4px solid #3882F6;
+    border-radius: 18px;
+    width: 165px;
+    height: 165px;
+}
+
+.card-subtext{
+    font-size: 18px;
+    color: gray;
+    text-align: center;
 }
