--- a/style.css
+++ b/style.css
@@ -213,3 +213,20 @@ button{
     border: 2px solid #F9FAF8;
     align-self: center;
 }
+
+/* Footer */
+.footer-container{
+    background-color: #1F2937;
+    min-height: 10vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer{
+    color: #E5E7EB;
+    font-weight: 100;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
